--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -9,5 +9,8 @@
   </head>
   <body>
     <h1>Welcome from the server. Ready to start the application</h1>
+
+    <div contenteditable="true" class="function-content"></div>
+    <button class="fetch-btn">Initiate headers request - FETCH</button>
   </body>
 </html>
